Fix composite action path

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Run unit tests
         run: npm run test
 
-      - uses: "./.github/shared/functional-tests.yml"
+      - uses: "./.github/shared/functional-tests"
